compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__higher_order_passing_top_level_fn.snap
---
source: compiler-core/src/go/tests/functions.rs
assertion_line: 238
expression: "\nfn double(x: Int) -> Int {\n  x * 2\n}\n\nfn apply(f: fn(Int) -> Int, x: Int) -> Int {\n  f(x)\n}\n\npub fn go() -> Int {\n  apply(double, 5)\n}\n"
---
----- SOURCE CODE

fn double(x: Int) -> Int {
  x * 2
}

fn apply(f: fn(Int) -> Int, x: Int) -> Int {
  f(x)
}

pub fn go() -> Int {
  apply(double, 5)
}


----- COMPILED GO
package thepackage

func double(x int64) int64 {
  return (x * int64(2))
}

func apply(f func(int64) int64, x int64) int64 {
  return f(x)
}

func Go() int64 {
  return apply(double, int64(5))
}
