compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__multiple_args.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn add(a: Int, b: Int) -> Int {\n  a + b\n}\n\npub fn go() -> Int {\n  add(1, 2)\n}\n"
---
----- SOURCE CODE

pub fn add(a: Int, b: Int) -> Int {
  a + b
}

pub fn go() -> Int {
  add(1, 2)
}


----- COMPILED GO
package thepackage

func Add(a int64, b int64) int64 {
  return (a + b)
}

func Go() int64 {
  return Add(int64(1), int64(2))
}
