compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__nested_closures.snap
---
source: compiler-core/src/go/tests/functions.rs
assertion_line: 224
expression: "\npub fn go() -> Int {\n  let make_adder = fn(a: Int) -> fn(Int) -> Int {\n    fn(b: Int) -> Int { a + b }\n  }\n  make_adder(10)(5)\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let make_adder = fn(a: Int) -> fn(Int) -> Int {
    fn(b: Int) -> Int { a + b }
  }
  make_adder(10)(5)
}


----- COMPILED GO
package thepackage

func Go() int64 {
  make_adder := func(a int64) func(int64) int64 {
    return func(b int64) int64 {
      return (a + b)
    }
  }
  _ = make_adder
  return make_adder(int64(10))(int64(5))
}
