compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__public_function_with_int_return.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn answer() -> Int {\n  42\n}\n"
---
----- SOURCE CODE

pub fn answer() -> Int {
  42
}


----- COMPILED GO
package thepackage

func Answer() int64 {
  return int64(42)
}
