compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__reserved_word_as_function_name.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn type_() -> Int {\n  0\n}\n"
---
----- SOURCE CODE

pub fn type_() -> Int {
  0
}


----- COMPILED GO
package thepackage

func Type() int64 {
  return int64(0)
}
